--- a/app/src/main/res/layout/dialog_calculator.xml
+++ b/app/src/main/res/layout/dialog_calculator.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="300dp"
+    android:orientation="vertical" android:layout_width="wrap_content"
     android:background="@drawable/blur_transparent"
-    android:layout_height="480dp">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -25,8 +25,8 @@
         android:text="0"
         android:id="@+id/calculatorNumber"/>
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <Button
             android:layout_width="75dp"
             android:layout_height="70dp"
