--- a/app/src/main/res/layout/dialog_cam_preview.xml
+++ b/app/src/main/res/layout/dialog_cam_preview.xml
@@ -1,34 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="600dp"
-    android:layout_height="600dp"
-    android:background="@color/colorBlack">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="650dp"
+    android:layout_height="700dp"
+    android:background="@color/transparent">
     <FrameLayout
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="650dp"
+        android:layout_alignParentStart="true"
         />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/relativeLayout">
+
+        <ImageView
+            android:text="Button"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:id="@+id/savePic"
+            android:layout_margin="40dp"
+            android:layout_gravity="center"
+            android:src="@drawable/sign_check_icon"/>
+        <ImageView
+            android:layout_gravity="center"
+            android:text="Button"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/giveUpPic"
+            android:layout_margin="40dp"
+            android:src="@drawable/sign_error_icon"/>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-        <Button
-            android:id="@+id/capture"
-            android:text="Capture"
-            android:textColor="@color/colorDarkBlue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/colorWhite"
-            />
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        >
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/capCancel"
             android:text="Cancel"
-            android:background="@color/colorWhite"
-            android:textColor="@color/colorDarkBlue"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
+            android:background="@color/colorInitBackground"
+            android:textColor="@color/colorSalmon"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true" />
+
+        <Button
+            android:id="@+id/capture"
+            android:text="Capture"
+            android:textColor="@color/colorWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorDarkBlue"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
     </RelativeLayout>
-</LinearLayout>
+
+
+</RelativeLayout>
