--- a/app/src/main/res/layout/dialog_create_document.xml
+++ b/app/src/main/res/layout/dialog_create_document.xml
@@ -3,8 +3,9 @@
     android:orientation="vertical"
     android:minHeight="400dp"
     android:minWidth="300dp"
-    android:layout_width="800dp"
-    android:layout_height="400dp">
+    android:layout_width="500dp"
+    android:layout_height="400dp"
+    android:background="@color/colorWhite">
 
     <View
         android:layout_width="match_parent"
@@ -63,11 +64,11 @@
             android:background="@color/colorPrimary"/>
         <Button
             android:id="@+id/nameCancel"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorSalmon"
             android:text="Cancel"
             android:layout_margin="2dp"
             android:layout_width="80dp"
             android:layout_height="40dp"
-            android:background="@color/colorSalmon"/>
+            android:background="@color/colorInitBackground"/>
     </LinearLayout>
 </LinearLayout>
