--- a/app/src/main/res/layout/dialog_record_player.xml
+++ b/app/src/main/res/layout/dialog_record_player.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="450dp"
-    android:layout_height="120dp"
-    android:background="@color/colorPrimary">
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:layout_width="40dp"
