--- a/app/src/main/res/layout/activity_init.xml
+++ b/app/src/main/res/layout/activity_init.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.InitActivity"
+    tools:context="com.jiazhou.auto.note.activity.InitActivity"
     android:background="@color/colorInitBackground"
     android:orientation="vertical">
     <ImageView
