--- a/app/src/main/res/layout/activity_nav.xml
+++ b/app/src/main/res/layout/activity_nav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.jiazhou.homeauto.homeauto.activity.NavActivity">
+    tools:context="com.jiazhou.homeauto.homeauto.com.jiazhou.auto.homeauto.activity.NavActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/functionPanel"/>
-        <!--com.jiazhou.homeauto.homeauto.control.panel.PicPainter
+        PicPainternter
             android:id="@+id/contentPanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/-->
