--- a/app/src/main/res/layout/control_pic_painter.xml
+++ b/app/src/main/res/layout/control_pic_painter.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
 
-    <com.jiazhou.homeauto.homeauto.control.features.ColorPicker
+    <com.jiazhou.auto.note.control.features.ColorPicker
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/picColorPicker"/>
