--- a/app/src/main/res/layout/dialog_record_player.xml
+++ b/app/src/main/res/layout/dialog_record_player.xml
@@ -1,37 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="450dp"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--
+/**
+ * Copyright (c) 2007, Google Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+-->
 
-    <Button
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/buttonPlayRecord"
-        android:background="@drawable/play"
-        android:layout_x="150dp"
-        android:layout_y="70dp" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="900dp"
+    android:layout_height="300dp"
+    android:orientation="vertical">
 
-    <Button
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/buttonPauseStop"
-        android:background="@drawable/stop"
-        android:layout_x="250dp"
-        android:layout_y="70dp" />
+    <com.jiazhou.auto.note.control.features.WaveformView
+        android:id="@+id/waveform"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"/>
 
-    <SeekBar
-        android:layout_width="367dp"
+    <TextView
+        android:id="@+id/info"
+        android:nextFocusUp="@+id/endmarker"
+        android:nextFocusDown="@+id/play"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
-        android:background="@color/colorInitBackground"
-        android:layout_x="39dp"
-        android:layout_y="33dp" />
-    <View
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/round_button"
-        android:layout_margin="5dp"
-        android:id="@+id/playerExit"/>
-</AbsoluteLayout>
+        style="@style/AudioFileInfoOverlayText"
+        android:gravity="center"/>
+
+    <LinearLayout
+        style="@style/ToolbarBackground"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:gravity="center">
+
+        <ImageButton
+            android:id="@+id/rew"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            style="@android:style/MediaButton"
+            android:src="@android:drawable/ic_media_previous"/>
+
+        <ImageButton
+            android:id="@+id/play"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            style="@android:style/MediaButton"
+            android:src="@android:drawable/ic_media_play"/>
+
+        <ImageButton
+            android:id="@+id/ffwd"
+            android:layout_width="60dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            style="@android:style/MediaButton"
+            android:src="@android:drawable/ic_media_next"/>
+
+    </LinearLayout>
+
+</LinearLayout>
